update js skeleton example

--- a/javascript-skeleton-example/index.html
+++ b/javascript-skeleton-example/index.html
@@ -15,28 +15,27 @@
     <script src="app.js" defer></script>
   </head>
   <body>
-    <div class="body">
+    <div class="body skeleton_container">
       <div class="skeleton image"></div>
       <div class="text_body">
-        <div class="skeleton name"></div>
-        <div class="skeleton description"></div>
+        <div class="skeleton text_name"></div>
+        <div class="skeleton text_description"></div>
       </div>
     </div>
-    <div class="profile body hidden">
-      <div class="profile image hidden">
-        <img
-          src="https://pbs.twimg.com/profile_images/1599514957225287680/WoFEypY__400x400.jpg"
-        />
+    <div class="profile body profile_container hidden">
+      <div class="image">
+        <img />
       </div>
-      <div class="profile text_body hidden">
-        <div class="profile name hidden">
-          Kevin Aguilar <span>@aguilarkevinn</span>
+      <div class="text_body">
+        <div class="text_name">
+          <!-- username -->
         </div>
-        <div class="profile description hidden">
+        <div class="text_description">
           <p>
-            Software engineer at <span>@getnerdify</span>. Dedicated to
-            developing solutions that enhance user experience and increase
-            efficiency.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio,
+            expedita dicta reiciendis ut omnis, aliquam aperiam ullam voluptas
+            eaque veritatis odit impedit esse quis distinctio ratione placeat in
+            illum corrupti.
           </p>
         </div>
       </div>
